styles.css
:root {
    --text-red: #c1272d;
}

html {
    width: 100vw;
}

body {
    overflow-x: hidden;
}

html, body {
    width: 100%;
    margin: 0;
    padding: 0;
}

.header__ui {
    display: flex;
    justify-content: space-between;
}

.logo__7thHell {
    width: auto;
    height: 7rem;
    align-items: left;
}

.nav__links {
    display: flex;
    list-style: none;
    gap: 3rem;
    text-align: right;
    font-size: 2rem;
    font-family: Impact;
}

.home__ui {
    background-color: #f7f5f3;
}

.home__ui h2 {
    font-size: 2rem;
    font-family: Impact;
    text-align: center;
}

.home__ui h3 {
    font-size: 1.25rem;
    font-weight: bold;
    font-style: italic;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
}

.home__ui .alignment__ui {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.home__ui p {
    font-size: 1.25rem;
    font-family: "Times New Roman", Times, serif;
    text-align: left;
    padding: 2rem;
    margin-top: -3rem;
}

.home__ui img {
    width: auto;
    height: 5rem;
    align-items: left;
}

.home__ui .zombie__section .zombies__picture {
    max-width: 100%;
    height: auto;
    display: block
}

.team__member__image {
    width: 10vw;
    aspect-ratio: 1/1;
}

.team__section {
  margin-top: 10rem;
}

.team__section h2 {
    font-size: 2rem;
    font-family: Impact;
    text-align: center;
}

.team__section h3 {
    font-size: 1.25rem;
    font-weight: bold;
    font-style: italic;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
}

.team__section .team__members {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: center;
}

.gradient__section {
    background: linear-gradient(to bottom, #0000, var(--text-red), #1b0303);
    width: 100vw;
}

.game__section {
    background-image: url("project\ images\/stairs.png");
    background-size: contain;
    background-repeat: no-repeat;
    position: relative;
    width: 100vw;
    height: 100vh;
    margin-top: 0;
}

.game__heading {
    text-align: center;
    margin-bottom: 5vh;
    margin-top: 5rem;
}

.game__heading__title {
    font-size: 2rem;
    font-family: Impact;
    text-align: center;
    margin-bottom: 0;
}

.game__heading__subtitle {
    font-size: 1.25rem;
    font-weight: bold;
    font-style: italic;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
}

.game__heading__description {
    font-size: 1.25rem;
    font-weight: bold;
    font-style: italic;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
    color: var(--text-red);
    font-weight: 700;
}

.game__summary {
    font-size: 1.25rem;
    font-family: "Aleo", serif;
    font-weight: 700;
}

.game__summary__1 {
    position: absolute;
    right: 5%;
    top: 10%;
    width: 25%;
}

.game__summary__2 {
    position: absolute;
    left: 22%;
    top: 15%;
    width: 25%;
}

.game__summary__3 {
    position: absolute;
    left: 2%;
    top: 40%;
    width: 25%;
}

.game__summary__4 {
    position: absolute;
    right: 22%;
    top: 45%;
    width: 25%;
}

.game__summary__5 {
    position: absolute;
    right: 5%;
    top: 70%;
    width: 25%;
}

.game__section h2 {
    font-size: 2rem;
    font-family: Impact;
    text-align: center;
    color: var(--text-red);
}

.game__section h3 {
    font-size: 1.25rem;
    font-weight: bold;
    font-style: italic;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
}

.game__section p {
    font-size: 1rem;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
}

.wishlist__section h2 {
    font-size: 2rem;
    font-family: Impact;
    text-align: center;
    color: #f7f5f3;
}

.wishlist__section h3 {
    font-size: 1.25rem;
    font-weight: bold;
    font-style: italic;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
}

.wishlist__section p {
    font-size: 1rem;
    font-family: "Times New Roman", Times, serif;
    text-align: center;
    color: #f7f5f3;
}

.wishlist__section .logo__wishlist {
    width: auto;
    height: 7rem;
    align-items: center;
}

.wishlist__button {
    display: block;
    margin: 0 auto;
    padding: 1rem 2rem;
    font-size: 1.25rem;
    font-family: Impact;
    background-color: var(--text-red);
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

